--- a/css/style.scss
+++ b/css/style.scss
@@ -7,10 +7,11 @@
 //<Подключаем шрифты>====================
 // ! &display=swap&subset=cyrillic-ext
 // todo if it isn't cirillic, simply write &display=swap
+@import url("https://fonts.googleapis.com/css?family=Lato:300,300italic,regular,italic,700,700italic,900,900italic&display=swap");
 //</Подлючаем шрифты>====================
 
 //<Шрифт по умолчанию>====================
-// ? $fontFamily: "";
+$fontFamily: Lato;
 //<Шрифт по умолчанию>====================
 
 //</ШРИФТЫ>====================
@@ -18,7 +19,7 @@
 //<ПЕРЕМЕННЫЕ>====================
 $minWidth: 0;
 $maxWidth: 0;
-$maxWidthContainer: 0;
+$maxWidthContainer: 1140;
 $md1: 320;
 $md2: 375;
 $md3: 425;
@@ -43,6 +44,11 @@ $md4: 768;
 
 a {
     text-decoration: none;
+    color: inherit;
+}
+
+a:visited {
+    color: inherit;
 }
 
 ul,
@@ -70,7 +76,7 @@ html,
 body {
     height: 100%;
     line-height: 1;
-    // todo: font-family: ;
+    font-family: $fontFamily;
 }
 
 //</ОБНУЛИРОВАНИЕ>====================
@@ -79,11 +85,22 @@ body {
 .wrapper {
     min-height: 100%;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 ._container {
     max-width: $maxWidthContainer + px;
     margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: content-box;
+}
+
+._card-container {
+    max-width: $maxWidthContainer + px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: content-box;
 }
 
 ._ibg {
@@ -98,4 +115,812 @@ body {
     left: 0;
     object-fit: cover;
 }
+
+:active,
+:hover,
+:focus {
+    outline: 0;
+    outline-offset: 0;
+}
 //</ОСНОВНАЯ СЕТКА>====================
+
+//<HEADER>====================
+.header {
+    background: #222222;
+    position: relative;
+    z-index: 55;
+
+    &__container {
+        min-height: 75px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__left {
+        min-height: 75px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__left a:last-child {
+        padding: 0 0 0 41px;
+    }
+
+    &__right {
+        min-height: 75px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__right a:nth-child(2) {
+        padding: 0 33px;
+    }
+
+    &__nav {
+        position: absolute;
+        top: 75px;
+        right: -100%;
+        transition: 0.222s;
+        overflow: auto;
+    }
+
+    &__opened {
+        right: 0;
+    }
+
+    &__nav.active {
+        right: 0;
+    }
+
+    @media (max-width: 425px) {
+        &__right a:not(:first-child) {
+            display: none;
+        }
+
+        &__right a:first-child {
+            padding-right: 0;
+        }
+    }
+}
+
+.nav {
+    max-width: 232px;
+    background-color: #fff;
+
+    &__wrap {
+        position: relative;
+    }
+
+    &__close {
+        display: flex;
+        justify-content: flex-end;
+        padding: 16px 17px 0 0;
+    }
+
+    &__title {
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 121%;
+        color: #000000;
+        padding: 9px 143px 24px 32px;
+    }
+
+    &__heading {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 121%;
+        color: #f16d7f;
+        padding: 0 144px 0 33px;
+    }
+
+    &__list {
+        padding-left: 55px;
+    }
+
+    &__list li {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 121%;
+        color: #6f6e6e;
+        padding-top: 12px;
+    }
+
+    &__list li:last-child {
+        padding-bottom: 20px;
+    }
+
+    &__list-end {
+        margin-bottom: 157px;
+    }
+}
+//</HEADER>====================
+
+//<MAIN>====================
+.main {
+    flex: 1 1 auto;
+}
+
+.intro {
+    background: #f1e4e6;
+
+    &__container {
+        min-height: 764px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        height: 100%;
+
+        background-image: url(../img/intro.png);
+        background-repeat: no-repeat;
+        background-position: -228px 0px;
+    }
+
+    &__text h1 {
+        max-width: 377px;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 29px;
+        line-height: 120%;
+        color: #222222;
+        padding: 0 0 0 20px;
+        border-left: 12px solid #f16d7f;
+    }
+
+    &__text-heading {
+        font-weight: 900;
+        font-size: 48px;
+        line-height: 120%;
+    }
+
+    &__text-red {
+        color: #f16d7f;
+    }
+
+    @media (max-width: 768px) {
+        &__container {
+            min-height: 367px;
+            background-size: 50%;
+            background-position: -50px 10px;
+        }
+    }
+
+    @media (max-width: 710px) {
+        &__container {
+            background-position: -50px 40px;
+        }
+    }
+
+    @media (max-width: 645px) {
+        &__container {
+            background-position: -50px 70px;
+        }
+    }
+
+    @media (max-width: 619px) {
+        &__container {
+            background-image: none;
+        }
+
+        &__text {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+
+        &__text h1 {
+            min-width: 236px;
+            font-style: normal;
+            font-size: 20px;
+            line-height: 120%;
+        }
+
+        &__text-heading {
+            font-size: 38px;
+            line-height: 121%;
+        }
+    }
+}
+
+.sales {
+    margin-top: 65px;
+
+    &__wrap {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__women {
+        width: 32%;
+        min-height: 260px;
+        background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)), url(../img/woman.jpg);
+        background-size: cover;
+        background-position: center;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    &__women h3 {
+        font-size: 16px;
+        line-height: 118%;
+        color: #ffffff;
+    }
+
+    &__women h2 {
+        font-size: 24px;
+        line-height: 120%;
+        color: #f16d7f;
+    }
+
+    &__men {
+        width: 32%;
+        min-height: 260px;
+        background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)), url(../img/man.jpg);
+        background-size: cover;
+        background-position: center;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    &__men h3 {
+        font-size: 16px;
+        line-height: 118%;
+        color: #ffffff;
+    }
+
+    &__men h2 {
+        font-size: 24px;
+        line-height: 120%;
+        color: #f16d7f;
+    }
+
+    &__kids {
+        width: 32%;
+        min-height: 260px;
+        background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)), url(../img/kids.jpg);
+        background-size: cover;
+        background-position: center;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    &__kids h3 {
+        font-size: 16px;
+        line-height: 118%;
+        color: #ffffff;
+    }
+
+    &__kids h2 {
+        font-size: 24px;
+        line-height: 120%;
+        color: #f16d7f;
+    }
+
+    &__acs {
+        margin-top: 30px;
+        background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)), url(../img/acs.jpg);
+        min-height: 180px;
+        background-size: cover;
+        background-position: center;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    &__acs h3 {
+        font-size: 16px;
+        line-height: 118%;
+        color: #ffffff;
+    }
+
+    &__acs h2 {
+        font-size: 24px;
+        line-height: 120%;
+        color: #f16d7f;
+    }
+
+    @media (max-width: 768px) {
+        &__women {
+            min-height: 167px;
+        }
+
+        &__men {
+            min-height: 167px;
+        }
+
+        &__kids {
+            min-height: 167px;
+        }
+
+        &__acs {
+            min-height: 116px;
+        }
+    }
+
+    @media (max-width: 425px) {
+        &__wrap {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &__women {
+            width: 100%;
+            min-height: 247px;
+        }
+
+        &__men {
+            width: 100%;
+            min-height: 247px;
+            margin: 32px 0;
+        }
+
+        &__kids {
+            width: 100%;
+            min-height: 247px;
+        }
+    }
+}
+
+.heading {
+    margin: 96px 0 0 0;
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h4 {
+            font-size: 30px;
+            line-height: 120%;
+            color: #222222;
+            text-align: center;
+        }
+
+        p {
+            font-size: 14px;
+            line-height: 121%;
+            color: #9f9f9f;
+            text-align: center;
+        }
+    }
+}
+
+.catalog {
+    margin: 48px 0 0 0;
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    &__card {
+        max-width: 360px;
+
+        h4 {
+            padding-top: 24.35px;
+            padding-left: 17px;
+            font-size: 15px;
+            line-height: 120%;
+            font-weight: 600;
+            color: #000000;
+        }
+
+        p {
+            padding: 12.65px 0 18px 17px;
+        }
+
+        h3 {
+            padding-bottom: 20px;
+            padding-left: 17px;
+            font-size: 16px;
+            line-height: 118%;
+            font-weight: normal;
+            color: #f16d7f;
+        }
+    }
+
+    &__card:nth-child(4) {
+        margin: 30px 0 0 0;
+    }
+
+    &__card:nth-child(5) {
+        margin: 30px 0 0 0;
+    }
+
+    &__card:nth-child(6) {
+        margin: 30px 0 0 0;
+    }
+
+    &__background {
+        width: 360px;
+        min-height: 420px;
+        background: #f7e4e2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__card:hover &__overlay {
+        opacity: 1;
+    }
+
+    &__img {
+        position: relative;
+
+        img {
+            object-fit: cover;
+            object-position: center;
+        }
+    }
+
+    &__overlay {
+        background: rgba(58, 56, 56, 0.86);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        transition: 0.37s;
+
+        a {
+            width: 138px;
+            min-height: 43px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border: 1px solid #ffffff;
+        }
+
+        img {
+            padding: 0 0 0 13px;
+        }
+
+        p {
+            font-size: 14px;
+            line-height: 121%;
+            color: #ffffff;
+            padding: 0 16px 0 0;
+        }
+    }
+
+    @media (max-width: 1109px) {
+        ._card-container {
+            max-width: 736px;
+        }
+
+        &__container {
+            justify-content: space-between;
+        }
+
+        &__card:nth-child(3) {
+            margin: 16.5px 0;
+        }
+
+        &__card:nth-child(4) {
+            margin: 16.5px 0;
+        }
+
+        &__card:nth-child(5) {
+            margin: 0px 0 0 0;
+        }
+
+        &__card:nth-child(6) {
+            margin: 0px 0 0 0;
+        }
+    }
+
+    @media (max-width: 750px) {
+        &__container {
+            justify-content: center;
+        }
+
+        &__card:not(:first-child) {
+            margin-top: 16px;
+        }
+    }
+
+    @media (max-width: 320px) {
+        &__card {
+            h4 {
+                padding-left: 23px;
+            }
+
+            p {
+                padding: 12.65px 10px 18px 23px;
+                width: 100%;
+            }
+
+            h3 {
+                padding-left: 23px;
+            }
+        }
+    }
+}
+
+.see-all {
+    margin-top: 48px;
+
+    &__container {
+        display: flex;
+        justify-content: center;
+
+        a {
+            min-width: 212px;
+            min-height: 48px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #f26376;
+            font-size: 16px;
+            line-height: 118%;
+            color: #f26376;
+            background-color: #fff;
+
+            transition: 0.23s;
+        }
+
+        a:hover {
+            color: #fff;
+            background-color: #f26376;
+        }
+    }
+}
+
+.advantage {
+    margin: 95px 0 0 0;
+    background: #222224;
+
+    &__container {
+        min-height: 341px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        padding: 10px 5px;
+    }
+
+    &__delivery {
+        max-width: 320px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__sales {
+        margin-top: 0;
+        max-width: 320px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__quality {
+        max-width: 320px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__img {
+        margin: 0 0 19px 0;
+    }
+
+    &__title {
+        font-size: 19.96px;
+        line-height: 120%;
+        color: #fbfbfb;
+
+        padding: 0 0 16px 0;
+    }
+
+    &__text {
+        font-size: 13.972px;
+        line-height: 121%;
+        color: #fbfbfb;
+        text-align: center;
+    }
+
+    @media (max-width: 768px) {
+        &__container {
+            flex-direction: column;
+        }
+
+        &__delivery {
+            margin: 48px 0 0 0;
+        }
+
+        &__sales {
+            margin: 48px 0;
+        }
+
+        &__quality {
+            margin: 0 0 64px 0;
+        }
+    }
+}
+
+.follow {
+    background-color: #f3f3f3;
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        min-height: 448px;
+    }
+
+    &__review {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 329px;
+
+        img {
+            width: 96px;
+            height: 96px;
+        }
+
+        h5 {
+            text-align: center;
+            padding: 30px 0 0 0;
+        }
+    }
+
+    &__subscribe {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h3 {
+            font-size: 24px;
+            line-height: 167.2%;
+            font-weight: 700;
+            color: #222224;
+        }
+
+        h4 {
+            font-size: 18px;
+            line-height: 167.2%;
+            font-weight: 400;
+            color: #222224;
+            text-align: center;
+        }
+    }
+
+    &__subscribe-send {
+        margin: 32px 0 0 0;
+        display: flex;
+
+        input {
+            padding: 0 22px;
+            max-width: 256px;
+            min-height: 49px;
+            border-top-left-radius: 30px;
+            border-bottom-left-radius: 30px;
+            background: #e1e1e1;
+
+            font-size: 14.5px;
+        }
+    }
+
+    &__subscribe-submit {
+        width: 100px;
+        min-height: 49px;
+        background: #f16d7f;
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+
+        transition: 0.23s;
+
+        a {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 14px;
+            line-height: 121%;
+            color: #ffffff;
+        }
+    }
+
+    &__subscribe-submit:hover {
+        background: #e05c6e;
+    }
+
+    @media (max-width: 768px) {
+        &__container {
+            flex-direction: column;
+        }
+
+        &__review {
+            margin: 64px 0 0 0;
+        }
+
+        &__subscribe {
+            margin: 48px 0 140px 0;
+        }
+    }
+}
+//</MAIN>====================
+
+//<FOOTER>====================
+.footer {
+    background: #222224;
+
+    &__container {
+        min-height: 79px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__text {
+        p {
+            font-size: 16px;
+            line-height: 118%;
+            color: #fbfbfb;
+        }
+    }
+
+    &__net {
+        ul {
+            display: flex;
+        }
+
+        li:not(:last-child) {
+            padding-right: 7.29px;
+        }
+
+        li a:hover .white {
+            fill: #f16d7f;
+        }
+
+        li a:hover .black {
+            fill: #ffffff;
+        }
+    }
+
+    @media (max-width: 425px) {
+        &__container {
+            flex-direction: column;
+        }
+
+        &__text {
+            order: 2;
+            margin: 0 0 9px 0;
+        }
+
+        &__net {
+            order: 1;
+            margin: 43px 0 40px 0;
+        }
+    }
+}
+
+.white {
+    transition: 0.22s;
+}
+
+.black {
+    transition: 0.22s;
+}
+//</FOOTER>====================
