--- a/css/style.scss
+++ b/css/style.scss
@@ -157,11 +157,30 @@ body {
         padding: 0 33px;
     }
 
+    &__right-bin {
+        position: relative;
+    }
+
+    &__right-bin-count {
+        position: absolute;
+        top: -5px;
+        right: -12px;
+        width: 19px;
+        height: 19px;
+        background-color: #ef5b70;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        font-size: 12px;
+        z-index: 50;
+    }
+
     &__nav {
         position: absolute;
         top: 75px;
         right: -100%;
-        transition: 0.222s;
         overflow: auto;
     }
 
@@ -187,6 +206,7 @@ body {
 .nav {
     max-width: 232px;
     background-color: #fff;
+    transition: 0.6s;
 
     &__wrap {
         position: relative;
@@ -507,6 +527,8 @@ body {
 
     &__card {
         max-width: 360px;
+        cursor: pointer;
+        background: #f8f8f8;
 
         h4 {
             padding-top: 24.35px;
