--- a/css/catalog.css
+++ b/css/catalog.css
@@ -397,6 +397,10 @@ details > summary::-webkit-details-marker {
   font-weight: 600;
   font-size: 14px;
   line-height: 121%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .filter__logo {
@@ -433,6 +437,10 @@ details > summary::-webkit-details-marker {
   padding: 0 0 0 11px;
   border-left: 5px solid #ef5b70;
   border-bottom: 1px solid #ebebeb;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .filter__sub:last-child > summary {
@@ -493,6 +501,10 @@ details > summary::-webkit-details-marker {
   font-size: 14px;
   line-height: 121%;
   color: #6f6e6e;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 @media (max-width: 425px) {
@@ -530,6 +542,10 @@ details > summary::-webkit-details-marker {
   font-size: 14px;
   line-height: 121%;
   color: #6f6e6e;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 @media (max-width: 425px) {
@@ -576,6 +592,10 @@ details > summary::-webkit-details-marker {
   font-size: 14px;
   line-height: 121%;
   color: #6f6e6e;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 @media (max-width: 425px) {
