--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,7 @@ body {
 }
 
 .catalog__background {
-  width: 360px;
+  max-width: 360px;
   min-height: 420px;
   background: #f7e4e2;
   display: -webkit-box;
@@ -645,6 +645,7 @@ body {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+  max-width: 100%;
 }
 
 .catalog__overlay {
