--- a/css/style.scss
+++ b/css/style.scss
@@ -566,7 +566,7 @@ body {
     }
 
     &__background {
-        width: 360px;
+        max-width: 360px;
         min-height: 420px;
         background: #f7e4e2;
         display: flex;
@@ -584,6 +584,7 @@ body {
         img {
             object-fit: cover;
             object-position: center;
+            max-width: 100%;
         }
     }
 
